--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: 主页
   {% else %}
     <span class="pagination-item older">Older</span>
   {% endif %}
-  {% if paginator.previous_page %}
+<!--   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
       <a class="pagination-item newer" href="{{ site.baseurl }}">Newer</a>
     {% else %}
@@ -33,5 +33,5 @@ title: 主页
     {% endif %}
   {% else %}
     <span class="pagination-item newer">Newer</span>
-  {% endif %}
+  {% endif %} -->
 </div>
