--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ title: 主页
   {% endfor %}
 </div>
 
-<div class="pagination">
+<!-- <div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
   {% else %}
     <span class="pagination-item older">Older</span>
   {% endif %}
-<!--   {% if paginator.previous_page %}
+  {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
       <a class="pagination-item newer" href="{{ site.baseurl }}">Newer</a>
     {% else %}
@@ -33,5 +33,5 @@ title: 主页
     {% endif %}
   {% else %}
     <span class="pagination-item newer">Newer</span>
-  {% endif %} -->
-</div>
+  {% endif %}
+</div> -->
